crates/service/tests/completion/snapshots/features__completion__cont__cont_def.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0"
  },
  {
    "label": "$ct1",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "1"
  },
  {
    "label": "$ft2",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0"
  },
  {
    "label": "3",
    "kind": 8,
    "sortText": "1"
  }
]
