crates/service/tests/completion/snapshots/features__completion__cont__cont_def_following_ident.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$ct1",
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "newText": "$ct1"
    }
  },
  {
    "label": "$ft2",
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "newText": "$ft2"
    }
  },
  {
    "label": "3",
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "newText": "3"
    }
  }
]
