crates/service/tests/completion/snapshots/features__completion__cont__cont_def_following_int.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$ct1",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "newText": "$ct1"
    }
  },
  {
    "label": "$ft2",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "newText": "$ft2"
    }
  },
  {
    "label": "3",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 15
        }
      },
      "newText": "3"
    }
  }
]
