crates/service/tests/completion/snapshots/features__completion__cont__cont_def_sort.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "$ft1",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ft1"
    }
  },
  {
    "label": "$ct1",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ct1"
    }
  },
  {
    "label": "$ft2",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ft2"
    }
  },
  {
    "label": "$ct2",
    "labelDetails": {
      "detail": "(cont)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ct2"
    }
  },
  {
    "label": "$ft3",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ft3"
    }
  },
  {
    "label": "$ct3",
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 7,
          "character": 19
        },
        "end": {
          "line": 7,
          "character": 20
        }
      },
      "newText": "$ct3"
    }
  }
]
