crates/service/tests/completion/snapshots/features__completion__cont__on.snap
---
source: crates/service/tests/completion/cont.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag)"
  },
  {
    "label": "$yield",
    "labelDetails": {
      "description": "[]"
    },
    "kind": 6,
    "detail": "(tag $yield)"
  }
]
